hotfix: apply jwt converter to decode token